Prepare Cloudflare Pages deployment

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Satirical Lapland 1995 management-horror where you juggle faxes, neon nightlife, and sanity in a cursed OS/95 UI.",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
