--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "gen:fax": "tsx tools/generateFaxEvents.ts"
+    "gen:fax": "tsx tools/generateFaxEvents.ts",
+    "test": "vitest run",
+    "test:smoke": "vitest run tests/smokeGameLoop.test.ts",
+    "smoke": "npm run test:smoke",
+    "check": "npm run lint && npm run build && npm run smoke"
   },
   "dependencies": {
     "lucide-react": "^0.554.0",
@@ -32,6 +36,7 @@
     "tsx": "^4.19.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vitest": "^2.1.4"
   }
 }
