--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "vitest run",
     "test:smoke": "vitest run tests/smokeGameLoop.test.ts",
     "smoke": "npm run test:smoke",
-    "check": "npm run lint && npm run build && npm run smoke"
+    "check": "npm run lint && npm run build && npm run smoke",
+    "validate-data": "tsx tools/validateData.ts"
   },
   "dependencies": {
     "lucide-react": "^0.554.0",
